added feature and page endpoints (#37)
* added feature and page endpoints

* Update PageController.cs

* resolved comments

* fixed yaml indent
