# code/src/CoreTemplateStudio/CoreTemplateStudio.Api/Models/PageModel.cs
@@ -1,0 +1,38 @@
+﻿// Licensed to the .NET Foundation under one or more agreements.
+// The .NET Foundation licenses this file to you under the MIT license.
+// See the LICENSE file in the project root for more information.
+
+using System.Collections.Generic;
+using CoreTemplateStudio.Api.Enumerables;
+
+namespace CoreTemplateStudio.Api.Models
+{
+    public class PageModel
+    {
+        public string Name { get; set; }
+
+        public string Description { get; set; }
+
+        private readonly HashSet<Framework> frameworks;
+
+        public string ImagePath { get; set; } = @"/icon.png";
+
+        public PageModel(Page page, params Framework[] supportedFrameworks)
+        {
+            this.Name = EnumerablesHelper.GetDisplayName(page);
+            this.Description = EnumerablesHelper.GetDescription(page);
+
+            this.frameworks = new HashSet<Framework>();
+
+            foreach (Framework supportedFramework in supportedFrameworks)
+            {
+                this.frameworks.Add(supportedFramework);
+            }
+        }
+
+        public bool HasFrameworks(HashSet<Framework> toCheckFrameworks)
+        {
+            return toCheckFrameworks.IsSubsetOf(this.frameworks);
+        }
+    }
+}
